--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noFallthroughCasesInSwitch": true,
     "noEmitOnError": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2016", "dom"]
+    "lib": ["es2016", "dom", "esnext"]
   },
   "include": ["src/__tests__/**.tsx"]
 }
